branch updated from master to main

--- a/.github/workflows/quay_push.yml
+++ b/.github/workflows/quay_push.yml
@@ -2,7 +2,7 @@ name: Animated Drawing
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "main" ]
     paths:
       - torchserve/**
 env:
